fix: random whitespace under the app when adding background

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
 .App {
-  width: 100%;
-  height: 100%;
-  background-image: url(/public/table-background.jpg);
-  background-size: contain;
   text-align: center;
 }
